# HydraConfigMVP

./: README.md
type1/: pyproject.toml
type1/src/: train.py
type1/src/config/: default.yaml  my_train_config.yaml
type1/src/config/optimizer/: sgd.yaml
type1/src/config/scheduler/: cosine_annealing_lr.yaml  reduce_lr_on_plateau.yaml
type2/: pyproject.toml
type2/src/: train.py
type2/src/config/: train.yaml
type2/src/config/train_config/: default.yaml  my_train_config.yaml
